Update KNN MNIST .ipynb

--- a/KNN MNIST .ipynb
+++ b/KNN MNIST .ipynb
@@ -39,7 +39,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('/Users/Dipesh/Desktop/CodingClub/Digit_Recognizer/train.csv')\n",
+    "df = pd.read_csv('train.csv')\n",
     "\n",
     "print(df.shape)"
    ]
@@ -447,7 +447,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Can we apply KNN to this data ?"
+    
    ]
   },
   {
